--- a/view/inc/top_page.html
+++ b/view/inc/top_page.html
@@ -19,6 +19,9 @@
     <!-- SweetAlert2 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.9/sweetalert2.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <!-- JavaScript MVC files -->
+    <script src = "view/js/ajaxpromise.js"></script>
+    <script src = "module/home/model/ctrl_home.js"></script>
 
     <title>Hexashop Ecommerce HTML CSS Template</title>
 
