FIX paint categorias

--- a/module/home/view/home.html
+++ b/module/home/view/home.html
@@ -15,11 +15,11 @@
 <!-- CATEGORIES -->
 <section id="port-sec">
     <div class="container">
-        <div class="row pad-row">
-            <div class="col-md-12 col-sm-12">
-                <ul class="portfolio-items2 col-3">
+        <div class="row-pad-row">
+            <div class="col-md-12-col-sm-12">
+                <ul class="portfolio-items2-col-3">
                     <h2 class="cat">Categorias</h2>
-                    <div id="containerCategories"></div>
+                    <div id="containerCategoria"></div>
                 </ul>
             </div>
         </div>
@@ -29,11 +29,11 @@
 <!-- TYPE CARS -->
 <section id="port-sec">
     <div class="container">
-        <div class="row pad-row">
+        <div class="row-pad-row">
             <div class="col-md-13 col-sm-13">
-                <ul class="portfolio-items col-3">
+                <ul class="portfolio-items-col-3">
                     <h2 class="cat">Tipos</h2>
-                    <div id="containerTypecar"></div>
+                    <div id="containerTipo"></div>
                 </ul>
             </div>
         </div>
