TO FIX carousel home

--- a/module/home/view/home.html
+++ b/module/home/view/home.html
@@ -1,5 +1,5 @@
 <!-- CARRUSEL BRANDS -->
-<div class="carousel">
+<!-- <div class="carousel">
     <div class="carousel__container">
         <button class="carousel__prev">
             <i class='bx bx-chevron-left'></i>
@@ -10,7 +10,25 @@
         </button>
     </div>
     <div class="carousel__indicator"></div>
+</div> -->
+
+<!-- GLIDER CAROUSEL -->
+<div class="glider-contain">
+    <div class="container_brands"></div>
+    <button aria-label="Previous" class="glider-prev">«</button>
+    <div class="carousel__list" style="text-align: center;"></div>
+    <button aria-label="Next" class="glider-next">»</button>
+    <div role="tablist" class="dots"></div>
 </div>
+
+<div class="home-demo">
+    <h3 style="color:blueviolet;">Carousel</h3>
+    <div class="owl-carousel owl-theme">
+        <div class="carousel_content">
+
+        </div>
+    </div>
+  </div>
 
 <!-- MARCAS -->
 <section id="port-sec">
