--- a/view/inc/top_page.html
+++ b/view/inc/top_page.html
@@ -8,11 +8,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-
     <!-- jQuery -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <!-- CAROUSEL GLIDER -->
+    <link rel="stylesheet" href="view/css/glider.css">
+    <link rel="stylesheet" href="view/css/glider.min.css">
+    <script src = "view/js/glider.js"></script>
+    <script src = "view/js/glider-compat.min.js"></script>
+    <script src = "view/js/glider.min.js"></script>
     <!-- jQuery Modal -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
@@ -22,6 +27,11 @@
     <!-- JavaScript MVC files -->
     <script src = "view/js/ajaxpromise.js"></script>
     <script src = "module/home/model/ctrl_home.js"></script>
+    <!-- OWL CAROUSEL -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <!-- CSS MIO -->
     <link rel="stylesheet" type="text/css" href="view/css/styles.css">
     <link rel="stylesheet" href="view/css/home.css">
