FIX carousel home

--- a/module/home/view/home.html
+++ b/module/home/view/home.html
@@ -1,48 +1,9 @@
-<!-- CARRUSEL BRANDS -->
-<!-- <div class="carousel">
-    <div class="carousel__container">
-        <button class="carousel__prev">
-            <i class='bx bx-chevron-left'></i>
-        </button>
-        <div class="carousel__list" style="text-align: center;"></div>
-        <button class="carousel__next">
-            <i class='bx bx-chevron-right'></i>
-        </button>
-    </div>
-    <div class="carousel__indicator"></div>
-</div> -->
-
-<!-- GLIDER CAROUSEL -->
-<div class="glider-contain">
-    <div class="container_brands"></div>
-    <button aria-label="Previous" class="glider-prev">«</button>
-    <div class="carousel__list" style="text-align: center;"></div>
-    <button aria-label="Next" class="glider-next">»</button>
-    <div role="tablist" class="dots"></div>
-</div>
-
+<!-- CAROUSEL HOME -->
 <div class="home-demo">
-    <h3 style="color:blueviolet;">Carousel</h3>
-    <div class="owl-carousel owl-theme">
-        <div class="carousel_content">
-
-        </div>
+    <h3 id="title-carousel-home">Eija entre nuestra variedad de marcas para elejir el producto perfecto para ti</h3>
+    <div class="owl-carousel owl-theme carousel-home">
     </div>
   </div>
-
-<!-- MARCAS -->
-<section id="port-sec">
-    <div class="container">
-        <div class="row-pad-row">
-            <div class="col-md-11-col-sm-11">
-                <ul class="portfolio-items2-col-1">
-                    <h2 class="cat">Elige entre todas nuestras marcas a la venta</h2>
-                    <div id="containerMarca"></div>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
 
 <!-- CATEGORIAS -->
 <section id="port-sec">
