UPDATE carousel tipos

--- a/module/home/view/home.html
+++ b/module/home/view/home.html
@@ -19,24 +19,7 @@
     </div>
 </section>
 
-<!-- TIPOS DE PRODUCTOS -->
-<!-- <section id="port-sec">
-    <div class="container">
-        <div class="row-pad-row">
-            <div class="col-md-13 col-sm-13">
-                <ul class="portfolio-items-col-3">
-                    <h2 class="cat">Escoge entre nuestra variedad de productos</h2>
-                    <div id="containerTipo" class="owl-carousel carousel-tipo"></div>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section> -->
-<!-- <div class="home-demo">
-    <h2 class="cat">Escoge entre nuestra variedad de productos</h2>
-    <div class="owl-carousel owl-theme carousel-tipo">
-    </div>
-  </div> -->
+<!-- TIPOS -->
 <div class="home-demo">
     <h3 id="title-carousel-tipo">Escoge entre nuestra variedad de productos</h3>
     <div class="owl-carousel owl-theme carousel-tipo">
