--- a/module/home/view/home.html
+++ b/module/home/view/home.html
@@ -27,6 +27,9 @@
 </div>
 
 <!-- PRODUCTOS -->
-
+<div class="home-demo">
+    <h3 id="title-carousel-producto">Echale un vistazo a nuestros productos disponibles</h3>
+    <div class="owl-carousel owl-thme carousel-producto"></div>
+</div>
 
 </section>
