--- a/module/home/view/home.html
+++ b/module/home/view/home.html
@@ -32,4 +32,10 @@
     <div class="owl-carousel owl-thme carousel-producto"></div>
 </div>
 
+<!-- ACCESORIOS -->
+ <div class="home-demo">
+    <h3 id="title-carousel-accesorio">Mejora tus habilidades en el campo con nuestra variedad de accesorios</h3>
+    <div class="owl-carousel owl-theme carousel-accesorio"></div>
+ </div>
+
 </section>
