--- a/module/home/view/home.html
+++ b/module/home/view/home.html
@@ -1,9 +1,11 @@
 <!-- CAROUSEL HOME -->
-<div class="home-demo">
-    <h3 id="title-carousel-home">Eija entre nuestra variedad de marcas para elejir el producto perfecto para ti</h3>
-    <div class="owl-carousel owl-theme carousel-home">
+<div id="carousel-principal">
+    <div class="home-demo">
+        <h3 id="title-carousel-home"></h3>
+        <div class="owl-carousel owl-theme carousel-home">
+        </div>
     </div>
-  </div>
+</div>
 
 <!-- CATEGORIAS -->
 <section id="port-sec">
@@ -11,7 +13,7 @@
         <div class="row-pad-row">
             <div class="col-md-12-col-sm-12">
                 <ul class="portfolio-items2-col-3">
-                    <h2 class="cat">Escoge el producto perfecto para ti</h2>
+                    <h3 id="title-categoria">Escoge el producto perfecto para ti</h3>
                     <div id="containerCategoria"></div>
                 </ul>
             </div>
@@ -21,7 +23,7 @@
 
 <!-- TIPOS -->
 <div class="home-demo">
-    <h3 id="title-carousel-tipo">Escoge entre nuestra variedad de productos</h3>
+    <h3 id="title-carousel-tipo">Escoge entre nuestros tipos de productos</h3>
     <div class="owl-carousel owl-theme carousel-tipo">
     </div>
 </div>
