--- a/view/inc/menu.html
+++ b/view/inc/menu.html
@@ -24,15 +24,15 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="#men">Men's</a></li>
-                            <li class="scroll-to-section"><a href="#women">Women's</a></li>
-                            <li class="scroll-to-section"><a href="#kids">Kid's</a></li>
+                            <li class="scroll-to-section"><a href="index.php" class="active">Home</a></li>
+                            <li class="scroll-to-section"><a href="#men">Hombre</a></li>
+                            <li class="scroll-to-section"><a href="#women">Mujer</a></li>
+                            <li class="scroll-to-section"><a href="#kids">Niños</a></li>
                             <li class="submenu">
-                                <a href="javascript:;">Pages</a>
+                                <a href="javascript:;">Paginas</a>
                                 <ul>
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="products.html">Products</a></li>
+                                    <li><a href="about.html">Sobre nosotros</a></li>
+                                    <li><a href="index.php?module=ctrl_shop&op=get_all">Productos</a></li>
                                     <li><a href="single-product.html">Single Product</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
