--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -27,7 +27,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <!-- JavaScript MVC files -->
     <script src = "view/js/ajaxpromise.js"></script>
-    <script src = "module/home/model/ctrl_home.js"></script>
+    <script src = "module/shop/model/ctrl_shop.js"></script>
     <!-- OWL CAROUSEL -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"> -->
@@ -39,7 +39,7 @@
     <link rel="stylesheet" type="text/css" href="view/css/styles.css">
     <link rel="stylesheet" href="view/css/home.css">
 
-    <title>Segunda Jugada</title>
+    <title>SJ - Productos</title>
 
 
     <!-- CSS PLANTILLA -->
