--- a/view/inc/menu.html
+++ b/view/inc/menu.html
@@ -19,7 +19,7 @@
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            <img src="view/images/logo.png">
+                            <img src="view/images/web-logo/logo-letrero.png">
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
