--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -37,9 +37,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <!-- CSS MIO -->
     <link rel="stylesheet" type="text/css" href="view/css/styles.css">
-    <link rel="stylesheet" href="view/css/home.css">
+    <link rel="stylesheet" href="view/css/menu.css">
 
     <title>SJ - Productos</title>
+    <link rel="icon" type="image/png" href="view/images/web-logo/favicon.png">
 
 
     <!-- CSS PLANTILLA -->
