TO CHANGE loadProductos to productos

--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -38,6 +38,7 @@
     <!-- CSS MIO -->
     <link rel="stylesheet" type="text/css" href="view/css/styles.css">
     <link rel="stylesheet" href="view/css/menu.css">
+    <link rel="stylesheet" href="view/css/shop.css">
 
     <title>SJ - Productos</title>
     <link rel="icon" type="image/png" href="view/images/web-logo/favicon.png">
