--- a/view/inc/menu.html
+++ b/view/inc/menu.html
@@ -25,12 +25,12 @@
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="index.php" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="index.php?module=ctrl_shop&op=get_all">Productos</a></li>
+                            <li class="scroll-to-section"><a href="index.php?module=ctrl_shop.php&op=get_all">Productos</a></li>
                             <li class="submenu">
                                 <a href="javascript:;">Paginas</a>
                                 <ul>
                                     <li><a href="about.html">Sobre nosotros</a></li>
-                                    <li><a href="index.php?module=ctrl_shop&op=get_all">Productos</a></li>
+                                    <li><a href="index.php?module=ctrl_shop&op=list">Productos</a></li>
                                     <li><a href="single-product.html">Single Product</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
