FIX shop products

--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -1,4 +1,4 @@
-<h2 id="title-shop">Todos los productos</h2>
+<!-- <h2 id="title-shop">Todos los productos</h2> -->
 <div class="container-productos">
     <!-- <div class="producto">
         <img src="view/images/tipos/chaquetas.png" alt="Chaqueta Azul">
