--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -23,7 +23,7 @@ body {
 }
 
 .producto {
-    background-color: white;
+    background-color: gainsboro;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -61,4 +61,12 @@ body {
     font-weight: bold;
     color: black;
     margin-top: 10px;
+}
+.producto img{
+    width: 512px;
+    height:512px;
+    object-fit:cover;
+    object-position: center;
+    margin:auto;
+    padding:auto;
 }
