--- a/view/inc/menu.html
+++ b/view/inc/menu.html
@@ -25,7 +25,7 @@
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="index.php" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="index.php?module=ctrl_shop.php&op=get_all">Productos</a></li>
+                            <li class="scroll-to-section"><a href="index.php?module=ctrl_shop&op=list">Productos</a></li>
                             <li class="submenu">
                                 <a href="javascript:;">Paginas</a>
                                 <ul>
