--- a/module/shop/view/details.html
+++ b/module/shop/view/details.html
@@ -1,6 +1,7 @@
 <div class="details">
     <div id="details-left">
-        <div class="container-productos">
+        <a>DETAILS</a>
+        <div class="container-details">
             
         </div>
     </div> <!-- end details-left -->
