--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -1,4 +1,4 @@
-<!-- <h2 id="title-shop">Todos los productos</h2> -->
+<!-- LIST -->
 <div class="container-productos">
     <!-- <div class="producto">
         <img src="view/images/tipos/chaquetas.png" alt="Chaqueta Azul">
@@ -7,4 +7,9 @@
             <p class="precio">139,99 €</p>
         </div>
     </div> -->
+</div>
+
+<!-- DETAILS -->
+<div class="container-details">
+
 </div>
