--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -12,7 +12,7 @@ body {
     text-align: center;
 }
 
-.container-productos {
+.container-productos, .container-details {
     width: 90%;
     max-width: 1200px;
     margin: 20px auto;
@@ -22,7 +22,7 @@ body {
     padding-top:3%;
 }
 
-.producto {
+.producto, .details {
     background-color: gainsboro;
     border-radius: 8px;
     overflow: hidden;
@@ -30,11 +30,11 @@ body {
     transition: transform 0.2s ease-in-out;
 }
 
-.producto:hover {
+.producto:hover, .details:hover {
     transform: translateY(-5px);
 }
 
-.producto img {
+.producto img, .details img {
     width: 100%;
     height: auto;
     display: block;
@@ -62,7 +62,7 @@ body {
     color: black;
     margin-top: 10px;
 }
-.producto img{
+.producto img, .details img{
     width: 512px;
     height:512px;
     object-fit:cover;
