--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -12,7 +12,7 @@ body {
     text-align: center;
 }
 
-.container-productos, .container-details {
+.container-productos{
     width: 90%;
     max-width: 1200px;
     margin: 20px auto;
@@ -22,7 +22,7 @@ body {
     padding-top:3%;
 }
 
-.producto, .details {
+.producto{
     background-color: gainsboro;
     border-radius: 8px;
     overflow: hidden;
@@ -30,11 +30,11 @@ body {
     transition: transform 0.2s ease-in-out;
 }
 
-.producto:hover, .details:hover {
+.producto:hover{
     transform: translateY(-5px);
 }
 
-.producto img, .details img {
+.producto img{
     width: 100%;
     height: auto;
     display: block;
@@ -62,7 +62,7 @@ body {
     color: black;
     margin-top: 10px;
 }
-.producto img, .details img{
+.producto img{
     width: 512px;
     height:512px;
     object-fit:cover;
@@ -70,6 +70,36 @@ body {
     margin:auto;
     padding:auto;
 }
+/* DETAILS */
 .details{
     padding-top:3%;
+}
+.details img{
+    width:512px;
+    height:512px;
+}
+.img-details{
+    display:block;
+    float:left;
+}
+.img-details, .inf-details{
+    display:inline-block;
+}
+.inf-details{
+    width:512px;
+    height:512px;
+    margin-left:10%;
+    /* background-color:red; */
+}
+.img-producto-border{
+    border-radius:10px;
+}
+.precio-details{
+    font-size: 30px;
+    color:goldenrod;
+    font-weight: bolder;
+    margin-top:3%;
+}
+.desc-details{
+    margin-top:3%;
 }
