CONT carousel details

--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -11,5 +11,6 @@
 
 <!-- DETAILS -->
 <div class="container-details">
-
+    <div class="productos_img" id="container-date-img"> </div>
+    <div class="date_car" id="container-date-img"> </div>
 </div>
