--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-
+<head>
     <!-- <meta charset="utf-8"> -->
     <meta charset="utf8mb4">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,9 +15,9 @@
     <!-- CAROUSEL GLIDER -->
     <link rel="stylesheet" href="view/css/glider.css">
     <link rel="stylesheet" href="view/css/glider.min.css">
-    <script src = "view/js/glider.js"></script>
-    <script src = "view/js/glider-compat.min.js"></script>
-    <script src = "view/js/glider.min.js"></script>
+    <script src="view/js/glider.js"></script>
+    <script src="view/js/glider-compat.min.js"></script>
+    <script src="view/js/glider.min.js"></script>
     <!-- jQuery Modal -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
@@ -26,39 +25,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.9/sweetalert2.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <!-- JavaScript MVC files -->
-    <script src = "view/js/ajaxpromise.js"></script>
-    <script src = "module/shop/model/ctrl_shop.js"></script>
+    <script src="view/js/ajaxpromise.js"></script>
+    <script src="module/shop/model/ctrl_shop.js"></script>
     <!-- OWL CAROUSEL -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"> -->
     <link rel="stylesheet" type="text/css" href="view/css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="view/css/owl.theme.default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <!-- CSS MIO -->
-    <link rel="stylesheet" type="text/css" href="view/css/styles.css">
+    <link rel="stylesheet" href="view/css/styles.css">
     <link rel="stylesheet" href="view/css/menu.css">
     <link rel="stylesheet" href="view/css/shop.css">
 
     <title>SJ - Productos</title>
     <link rel="icon" type="image/png" href="view/images/web-logo/favicon.png">
 
-
     <!-- CSS PLANTILLA -->
     <link rel="stylesheet" type="text/css" href="view/css/bootstrap.min.css">
-
     <link rel="stylesheet" type="text/css" href="view/css/font-awesome.css">
-
     <link rel="stylesheet" href="view/css/templatemo-hexashop.css">
-
     <link rel="stylesheet" href="view/css/owl-carousel.css">
-
     <link rel="stylesheet" href="view/css/lightbox.css">
-<!--
-
-TemplateMo 571 Hexashop
-
-https://templatemo.com/tm-571-hexashop
-
--->
-    </head>
+</head>
