ADD details img - inf inline

--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -11,6 +11,8 @@
 
 <!-- DETAILS -->
 <div class="container-details">
-    <div class="owl-carousel owl-theme productos_img" id="container-date-img"> </div>
+    <div class="prodsimg">
+        <div class="owl-carousel owl-theme productos_img" id="container-date-img"> </div>
+    </div>
     <div class="inf-details" id="container-date-img"> </div>
 </div>
