--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -32,6 +32,8 @@
     <link rel="stylesheet" type="text/css" href="view/css/owl.theme.default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- CSS MIO -->
     <link rel="stylesheet" href="view/css/styles.css">
     <link rel="stylesheet" href="view/css/menu.css">
