--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -1,13 +1,17 @@
 <!-- LIST -->
-<div class="container-productos">
-    <!-- <div class="producto">
-        <img src="view/images/tipos/chaquetas.png" alt="Chaqueta Azul">
-        <div class="inf-producto">
-            <h3>Chaqueta Acolchada - Hombre</h3>
-            <p class="precio">139,99 €</p>
-        </div>
-    </div> -->
-</div>
+<div class="container-shop-list">
+    <div class="container-filtros">
+    </div> <!-- end .container-filtros -->
+        <div class="container-productos">
+            <!-- <div class="producto">
+                <img src="view/images/tipos/chaquetas.png" alt="Chaqueta Azul">
+                <div class="inf-producto">
+                    <h3>Chaqueta Acolchada - Hombre</h3>
+                    <p class="precio">139,99 €</p>
+                </div>
+            </div> -->
+        </div> <!-- end .container-productos -->
+</div> <!-- end .container-shop-list -->
 
 <!-- DETAILS -->
 <div class="container-details">
