ADD leafleft map

--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -13,3 +13,9 @@
     </div>
     <div class="inf-details" id="container-date-img"> </div>
 </div>
+
+<!-- LEAFLET (MAPA) -->
+<div id="map"></div>
+
+<!-- BOTON PARA DESPLAZARSE ARRIBA DEL TODO -->
+<div class="sot"></div>
