--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -41,6 +41,14 @@
     <link rel="stylesheet" href="view/css/styles.css">
     <link rel="stylesheet" href="view/css/menu.css">
     <link rel="stylesheet" href="view/css/shop.css">
+    <!-- CSS LEAFLET -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
+    <!-- JS LEAFLET -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
 
     <title>SJ - Productos</title>
     <link rel="icon" type="image/png" href="view/images/web-logo/favicon.png">
