FIX whitespace details on list shop

--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -7,7 +7,7 @@
 </div> <!-- end .container-shop-list -->
 
 <!-- DETAILS -->
-<div class="container-details">
+<div class="container-details" id="cont-det">
     <div class="prodsimg">
         <div class="owl-carousel owl-theme productos_img" id="container-date-img"> </div>
     </div>
