--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -190,6 +190,11 @@ body {
     border:2px solid goldenrod;
 }
 
+.img_popup{
+    width:100%;
+    height:100%;
+}
+
 /* DETAILS */
 .container-details {
     display: flex;
