ADD map to details

--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -15,7 +15,7 @@
 </div>
 
 <!-- LEAFLET (MAPA) -->
-<div id="map"></div>
+<div class="mapLeafleft"></div>
 
 <!-- BOTON PARA DESPLAZARSE ARRIBA DEL TODO -->
 <div class="sot"></div>
